# CourseWorkDjango

./: README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_links.py  0003_blog_user.py  0004_alter_blog_count_alter_blog_image.py
blog/templates/: blog_detail.html
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
config/config/: settings.py  urls.py
config/mail/: models.py  urls.py  views.py
mail/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mail/management/commands/: runapsceduler.py
mail/migrations/: 0001_initial.py  0002_client_user_maildistributionsettings_user_and_more.py  0003_remove_maildistributionsettings_date_finish.py  0004_alter_maildistributionsettings_distribution_status.py  0005_alter_logs_attempt_status.py  0006_logs_user.py
mail/services/: send_mail.py
mail/templates/mail/: base.html  clent_delete_confirm.html  clients_list.html  home.html  logs_list.html  mailling_confirm_delete.html  mailling_detail.html  mailling_list.html  message_delete_confirm.html  message_detail.html  message_form.html  messages_list.html  user_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_verify_token.py  0003_alter_user_verify_token.py  0004_alter_user_verify_token.py  0005_alter_user_verify_token.py  0006_alter_user_verify_token.py  0007_alter_user_verify_token.py  0008_alter_user_verify_token.py
(+8 files in other folders)
