[tool.poetry]
name = "courseworkdjango"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
